--- a/Classicist Express/userID/static/user.css
+++ b/Classicist Express/userID/static/user.css
@@ -113,6 +113,20 @@ a {
     margin-bottom: 20px;
   }
 
+  .individual-news .approve {
+    left: -50px;
+  }
+
+  .individual-news .delete {
+    top: -90px;
+    left: -140px;
+  }
+
+  .individual-news .tasks-view {
+    top: -41px;
+    left: 60px;
+  }
+
   .view-btn,
   .delete-btn {
     padding: 10px 20px;
@@ -160,6 +174,21 @@ a {
     position: relative;
     top: -40px;
     right: -40px;
+  }
+
+  .tasks .tasks-view {
+    top: 0;
+    left: 35px;
+  }
+
+  .tasks .delete {
+    top: 0;
+    left: 25px;
+  }
+
+  .tasks .approve {
+    top: 0;
+    left: 45px;
   }
 
   .view,
@@ -216,7 +245,7 @@ a {
     border: 0.1px solid #ccc;
     padding: 20px;
     background-color: #17181b;
-    margin: 15px 0;
+    margin: 15px;
     max-height: 64px;
     overflow: hidden;
     transition: all 0.3s ease;
@@ -224,7 +253,7 @@ a {
   }
 
   .single-user.expand {
-    max-height: 300px;
+    max-height: 480px;
   }
 
   /**/
@@ -236,6 +265,7 @@ a {
     height: 70px;
     width: 70px;
     margin: 20px;
+    white-space: nowrap;
   }
 
   .user-img img {
@@ -252,6 +282,13 @@ a {
   .user-info p {
     font-size: 14px;
     line-height: 1.3;
+  }
+  .search-box i {
+    margin-right: 10px;
+  }
+
+  .search-box {
+    margin: 25px;
   }
 }
 
@@ -383,6 +420,10 @@ a {
     float: right;
   }
 
+  .individual-news .side-buttons {
+    margin-top: 40px;
+  }
+
   .view,
   .delete,
   .approve,
@@ -462,7 +503,7 @@ a {
   }
 
   .single-user.expand {
-    max-height: 300px;
+    max-height: 370px;
   }
 
   /**/
@@ -491,4 +532,67 @@ a {
     font-size: 14px;
     line-height: 1.3;
   }
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.search-box {
+  width: fit-content;
+  height: fit-content;
+  position: relative;
+}
+.input-search {
+  height: 50px;
+  width: 50px;
+  border-style: none;
+  padding: 10px;
+  font-size: 18px;
+  letter-spacing: 2px;
+  outline: none;
+  border-radius: 25px;
+  transition: all 0.5s ease-in-out;
+  background-color: #22a6b3;
+  padding-right: 40px;
+  color: #fff;
+}
+.input-search::placeholder {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-weight: 100;
+}
+.btn-search {
+  width: 50px;
+  height: 50px;
+  border-style: none;
+  font-size: 20px;
+  font-weight: bold;
+  outline: none;
+  cursor: pointer;
+  border-radius: 50%;
+  position: absolute;
+  right: 0px;
+  color: #ffffff;
+  background-color: transparent;
+  pointer-events: painted;
+}
+.btn-search:focus ~ .input-search {
+  width: 300px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2);
+}
+.input-search:focus {
+  width: 300px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2);
+}
+
+.search-box i {
+  margin-left: 10px;
 }
