--- a/Classicist Express/userID/templates/user.html
+++ b/Classicist Express/userID/templates/user.html
@@ -70,6 +70,7 @@
           <div class="tasks">
             <div class="heading">
               <h3>{{ content.heading }}</h3>
+
               <div class="side-buttons">
                 {% if content.state == False %}
                 <form action="{{ acc_url }}" method="post">
@@ -142,7 +143,7 @@
               </div>
               <div class="expand">
                 <div class="user-img">
-                  <img src=" /media/{{ user.image }}" alt="Image not found" />
+                  <img src="/media/{{ user.image }}" alt="Image not found" />
                 </div>
                 <div class="user-info">
                   <div>
@@ -154,10 +155,10 @@
                     <p>{{ user.number }}</p>
                   </div>
                 </div>
-                {% for indi_con in contents  %}
-                {% if indi_con.writer == user.accessID %}
+                {% for indi_con in contents %} {% if indi_con.writer ==
+                user.accessID %}
+                <h2 class="news">News</h2>
                 <div class="individual-news">
-                  
                   <div class="heading">
                     <h3>{{ indi_con.heading }}</h3>
 
@@ -195,8 +196,7 @@
                         />
                         <input type="submit" class="delete" value="Delete" />
                       </form>
-                    {% endif %}
-                  
+                      {% endif %}
                     </div>
                   </div>
                   {% endfor %}
@@ -209,6 +209,6 @@
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="  {% static 'user.js' %}"></script>
+    <script src="{% static 'user.js' %}"></script>
   </body>
 </html>
