--- a/Classicist Express/userID/static/user.css
+++ b/Classicist Express/userID/static/user.css
@@ -113,20 +113,6 @@ a {
     margin-bottom: 20px;
   }
 
-  .individual-news .approve {
-    left: -50px;
-  }
-
-  .individual-news .delete {
-    top: -90px;
-    left: -140px;
-  }
-
-  .individual-news .tasks-view {
-    top: -41px;
-    left: 60px;
-  }
-
   .view-btn,
   .delete-btn {
     padding: 10px 20px;
@@ -140,16 +126,11 @@ a {
     background-color: #ffca2b;
     color: #000;
     margin-top: 45px;
-    top: 72%;
-    right: 0;
   }
 
   .delete-btn {
     background-color: #bb2d3a;
     color: #fff;
-    top: 70%;
-    right: 0;
-    margin-top: 15px;
   }
 
   .view-btn:hover,
@@ -171,24 +152,6 @@ a {
     font-size: 14px;
     border: none;
     border-radius: 2px;
-    position: relative;
-    top: -40px;
-    right: -40px;
-  }
-
-  .tasks .tasks-view {
-    top: 0;
-    left: 35px;
-  }
-
-  .tasks .delete {
-    top: 0;
-    left: 25px;
-  }
-
-  .tasks .approve {
-    top: 0;
-    left: 45px;
   }
 
   .view,
@@ -205,34 +168,11 @@ a {
     background-color: #bb2d3a;
     color: #fff;
     cursor: pointer;
-    margin-top: 4px;
-    right: -130px;
   }
   .approve {
     background-color: green;
     color: #fff;
     cursor: pointer;
-    top: 15px;
-    left: 25px;
-  }
-
-  .tasks {
-    min-height: 170px;
-  }
-
-  .tasks .side-buttons {
-    display: flex;
-  }
-
-  .tasks .side-buttons .delete {
-    margin-top: 10px;
-  }
-
-  .tasks .heading h3 {
-    margin-bottom: 45px;
-  }
-  .side-buttons {
-    float: right;
   }
 
   .user-details {
@@ -243,17 +183,25 @@ a {
   .single-user,
   .tasks {
     border: 0.1px solid #ccc;
-    padding: 20px;
+    padding: 8px 20px;
     background-color: #17181b;
     margin: 15px;
-    max-height: 64px;
+    max-height: 68px;
     overflow: hidden;
     transition: all 0.3s ease;
     color: #fff;
   }
 
+  .single-user {
+    transition: all 0.3s ease;
+  }
   .single-user.expand {
-    max-height: 480px;
+    max-height: 350px;
+    overflow-y: scroll;
+  }
+
+  .tasks {
+    max-height: 200px;
   }
 
   /**/
@@ -370,10 +318,6 @@ a {
     margin-left: 10px;
   }
 
-  form {
-    display: inline;
-  }
-
   .logout {
     margin-left: 5px;
     color: #ccc;
@@ -391,23 +335,16 @@ a {
     font-size: 14px;
     border: none;
     border-radius: 2px;
-    display: block;
   }
 
   .view-btn {
     background-color: #ffca2b;
     color: #000;
-    position: fixed;
-    top: 30%;
-    right: 5%;
   }
 
   .delete-btn {
     background-color: #bb2d3a;
     color: #fff;
-    position: fixed;
-    top: 36%;
-    right: 5%;
     cursor: pointer;
   }
 
@@ -416,12 +353,8 @@ a {
     opacity: 0.8;
   }
 
-  .side-buttons {
-    float: right;
-  }
-
   .individual-news .side-buttons {
-    margin-top: 40px;
+    margin-top: 10px;
   }
 
   .view,
@@ -433,8 +366,6 @@ a {
     font-size: 14px;
     border: none;
     border-radius: 2px;
-    position: relative;
-    top: -40px;
   }
 
   .view:hover,
@@ -462,12 +393,19 @@ a {
     cursor: pointer;
   }
 
-  .tasks {
-    min-height: 150px;
+  .tasks .heading h3 {
+    margin: 10px 0;
+  }
+  .single-user::-webkit-scrollbar {
+    width: 5px;
   }
 
-  .tasks .heading h3 {
-    margin-bottom: 45px;
+  .single-user::-webkit-scrollbar-track {
+    background: #17181b;
+  }
+
+  .single-user::-webkit-scrollbar-thumb {
+    background: #fff;
   }
 
   @media (max-width: 1286px) {
@@ -494,16 +432,22 @@ a {
   .tasks {
     width: 500px;
     border: 0.1px solid #ccc;
-    padding: 20px;
+    padding: 8px 20px;
     background-color: #17181b;
     margin: 30px 0;
-    max-height: 64px;
+    max-height: 70px;
     overflow: hidden;
-    transition: all 0.3s ease;
+    transition: all 1s ease;
+  }
+
+  .tasks {
+    /* overflow-y: scroll; */
+    max-height: 170px;
   }
 
   .single-user.expand {
-    max-height: 370px;
+    max-height: 600px;
+    overflow-y: scroll;
   }
 
   /**/
@@ -595,4 +539,74 @@ a {
 
 .search-box i {
   margin-left: 10px;
+}
+
+.side-buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.individual-news .heading {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.individual-news {
+  background-color: #17181b;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.news {
+  margin-bottom: 10px;
+}
+
+@media (max-width: 472px) {
+  .side-buttons {
+    flex-direction: column;
+  }
+
+  .heading {
+    align-items: flex-start;
+  }
+
+  .heading h3 {
+    margin-top: 15px;
+  }
+  .single-user.expand {
+    max-height: 350px;
+    overflow-y: scroll;
+  }
+
+  .individual-news .side-buttons {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-end;
+    flex-wrap: wrap;
+  }
+
+  .tasks .side-buttons {
+    flex-direction: row;
+  }
+}
+
+.tasks .heading {
+  flex-direction: column;
+}
+
+@media (max-width: 348px) {
+  .tasks .side-buttons {
+    flex-direction: column;
+  }
+  .tasks {
+    max-height: 500px;
+  }
 }
