--- a/Classicist Express/readMore/static/readmore.css
+++ b/Classicist Express/readMore/static/readmore.css
@@ -46,9 +46,7 @@ a {
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-
   background: #fff5e8;
-
   color: #fff;
   padding: 20px 30px;
 }
@@ -264,12 +262,13 @@ a {
 
 .image {
   height: 500px;
+  width: 50vw;
 }
 
 img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 @media (max-width: 850px) {
@@ -290,7 +289,6 @@ img {
     object-fit: contain;
   }
 }
-
 /* comment-box */
 
 .comment-box {
@@ -359,7 +357,7 @@ img {
 }
 
 .btn:hover {
-  background-position: right center; /* change the direction of the change here */
+  background-position: right center;
   color: #fff;
   text-decoration: none;
 }
@@ -370,3 +368,62 @@ img {
   }
 }
 
+.tip {
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  background: transparent;
+  border: 10px solid #d3a047;
+}
+
+.tip-up {
+  top: -25px;
+  left: 10px;
+  border-right-color: transparent;
+  border-left-color: transparent;
+  border-top-color: transparent;
+}
+
+.tip-down {
+  bottom: -25px;
+  left: 10px;
+  border-right-color: transparent;
+  border-left-color: transparent;
+  border-bottom-color: transparent;
+}
+
+.tip-left {
+  top: 10px;
+  left: -25px;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  border-bottom-color: transparent;
+}
+
+.tip-right {
+  top: 10px;
+  right: -25px;
+  border-top-color: transparent;
+  border-right-color: transparent;
+  border-bottom-color: transparent;
+}
+
+.dialogbox .body {
+  position: relative;
+  width: 100%;
+  height: auto;
+  margin: 25px 10px 25px 0;
+  padding: 10px 16px;
+  background-color: #d6ae67;
+  border-radius: 3px;
+  border: 5px solid #d3a047;
+  background-image: url("https://www.transparenttextures.com/patterns/arches.png");
+}
+
+.body .comment {
+  min-height: 30px;
+  border-radius: 3px;
+  font-size: 14px;
+  line-height: 1.5;
+  color: #fff;
+}
