--- a/Classicist Express/readMore/templates/readmore.html
+++ b/Classicist Express/readMore/templates/readmore.html
@@ -82,7 +82,8 @@
       <!-- comment-box -->
       <div class="comment-box">
         <h2>Leave a Comment</h2>
-        <form action="" method="post">
+        <form action="{{ acc_url }}" method="post">
+          {% csrf_token %}
           <input
             type="text"
             name="fullName"
