--- a/Classicist Express/readMore/static/readmore.css
+++ b/Classicist Express/readMore/static/readmore.css
@@ -163,7 +163,7 @@ a {
 
   .navigation-container {
     display: flex;
-
+    z-index: 1000;
     align-items: center;
     flex-wrap: wrap;
   }
@@ -295,7 +295,7 @@ img {
   width: 500px;
 }
 
-.comment-box h2 {
+.comment-box > h2 {
   font-size: 20px;
   margin-bottom: 15px;
 }
@@ -368,56 +368,15 @@ img {
   }
 }
 
-.tip {
-  width: 0px;
-  height: 0px;
-  position: absolute;
-  background: transparent;
-  border: 10px solid #d3a047;
-}
-
-.tip-up {
-  top: -25px;
-  left: 10px;
-  border-right-color: transparent;
-  border-left-color: transparent;
-  border-top-color: transparent;
-}
-
-.tip-down {
-  bottom: -25px;
-  left: 10px;
-  border-right-color: transparent;
-  border-left-color: transparent;
-  border-bottom-color: transparent;
-}
-
-.tip-left {
-  top: 10px;
-  left: -25px;
-  border-top-color: transparent;
-  border-left-color: transparent;
-  border-bottom-color: transparent;
-}
-
-.tip-right {
-  top: 10px;
-  right: -25px;
-  border-top-color: transparent;
-  border-right-color: transparent;
-  border-bottom-color: transparent;
-}
-
 .dialogbox .body {
-  position: relative;
   width: 100%;
   height: auto;
   margin: 25px 10px 25px 0;
   padding: 10px 16px;
-  background-color: #d6ae67;
+  padding-bottom: 30px;
+  background-color: #fcf0de;
   border-radius: 3px;
-  border: 5px solid #d3a047;
-  background-image: url("https://www.transparenttextures.com/patterns/arches.png");
+  border: 1px solid #d6ae67;
 }
 
 .body .comment {
@@ -425,5 +384,55 @@ img {
   border-radius: 3px;
   font-size: 14px;
   line-height: 1.5;
-  color: #fff;
+  color: #797979;
+}
+
+.user-img {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.user-img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.user-details {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 15px;
+  flex-wrap: wrap;
+}
+
+.user-details h2 {
+  font-size: 25px;
+  font-weight: bolder;
+  margin-right: 5px;
+}
+
+.comment-box .container {
+  margin-bottom: 70px;
+}
+
+@media (max-width: 476px) {
+  .user-details h2 {
+    font-size: 20px;
+  }
+
+  .user-details p {
+    margin-left: 60px;
+    margin-top: -17px;
+  }
+
+  .user-img {
+    width: 50px;
+    height: 50px;
+    margin-top: 20px;
+  }
+  .dialogbox .body {
+    padding-bottom: 30px;
+  }
 }
