--- a/Classicist Express/readMore/templates/readmore.html
+++ b/Classicist Express/readMore/templates/readmore.html
@@ -84,23 +84,22 @@
         <div class="container">
           <div class="dialogbox">
             <h2>Comments</h2>
-            <!-- comment -->
+            {% for commnet in comments %}
             <div class="body">
               <div class="comment">
                 <div class="user-details">
                   <div class="user-img">
                     <img src="images/profile.png" alt="" />
                   </div>
-                  <h2>Srayoshi Ghosh</h2>
-                  <p>- 25 September, 2021</p>
+                  <h2>comment.name</h2>
+                  <p>- commnet.date</p>
                 </div>
                 <span
-                  >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Debitis, inventore facere. Possimus, excepturi tenetur id et
-                  vitae corrupti eius qui.</span
+                  >comment.comment</span
                 >
               </div>
             </div>
+            {% endfor %}
             <!-- comment -->
           </div>
         </div>
