--- a/Classicist Express/userID/templates/user.html
+++ b/Classicist Express/userID/templates/user.html
@@ -108,7 +108,7 @@
           {% empty %} No Notifications {% endfor %}
         </div>
         {% endif %}
-
+        {% if POST == 'Admin' %}
         <!-- user tab panel -->
         <div class="tab-panel">
           <div class="search-box">
@@ -210,6 +210,7 @@
             {% endif %} {% endfor %}
           </div>
         </div>
+        {% endif %}
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
