--- a/Classicist Express/publish/templates/publish.html
+++ b/Classicist Express/publish/templates/publish.html
@@ -80,6 +80,7 @@
         ></span>
         <input type="text" class="form-control" placeholder="Name" name="name" required />
       </div>
+      <input type='hidden' id="_check" name="_check" />
 
      <input type="submit" class="btn btn-dark btn-lg" value="PUBLISH" onclick="check()" />
   </form>
