--- a/Classicist Express/readMore/templates/readmore.html
+++ b/Classicist Express/readMore/templates/readmore.html
@@ -88,11 +88,11 @@
             <div class="body">
               <div class="comment">
                 <div class="user-details">
-                  <h2>commnet.name</h2>
-                  <p>- commnet.date</p>
+                  <h2>{{ commnet.name }}</h2>
+                  <p>- {{ commnet.date }}</p>
                 </div>
                 <span
-                  >commnet.comment</span
+                  >{{ commnet.comment }}</span
                 >
               </div>
             </div>
